--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,21 @@
 .container.dark{
     background: #222;
 }
+.section-spacing {
+  min-height: 100vh;
+  margin-top: 5rem;
+}
+
+@media (min-width: 768px) {
+  .section-spacing {
+    margin-top: 7.5rem;
+  }
+}
+.my-heading {
+  font-weight: 700;
+  font-size: 1.875rem;
+ 
+ 
+}
+
+
