--- a/src/index.css
+++ b/src/index.css
@@ -43,4 +43,9 @@
   flex-shrink: 0;
   display: flex;
 }
-
+.readmore{
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  display: -webkit-box;
+}
