--- a/src/index.css
+++ b/src/index.css
@@ -44,8 +44,6 @@
   display: flex;
 }
 .readmore{
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  display: -webkit-box;
+  color: blue;
+  
 }
